hphp/hack/test/typecheck/ffp/function_static_bad.php
<?hh // partial
// Copyright 2004-present Facebook. All Rights Reserved.

async static function foo(): void {
}
